--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   firebase_core: ^1.21.0
   flutter:
     sdk: flutter
+  flutter_state_notifier: ^0.7.1
   freezed_annotation: ^2.1.0
   provider: ^6.0.3
+  state_notifier: ^0.7.2+1
   validators: ^3.0.0
 
 dev_dependencies:
